@@ -12,9 +12,9 @@ class PDF::OBJR
     use PDF::COS::Tie;
     use PDF::COS::Name;
     use PDF::Page;
-    my subset Name-OBJR of PDF::COS::Name where 'OBJR';
-    has Name-OBJR $.Type is entry(:required);
-    has PDF::Page $.Pg is entry(:indirect);       #| (Optional; must be an indirect reference) The page object representing the page on which the object is rendered. This entry overrides any Pg entry in the structure element containing the object reference; it is required if the structure element has no such entry.
+
+    has PDF::COS::Name $.Type is entry(:required) where 'OBJR';
+    has PDF::Page $.Pg is entry(:indirect, :alias<page>);       #| (Optional; must be an indirect reference) The page object representing the page on which the object is rendered. This entry overrides any Pg entry in the structure element containing the object reference; it is required if the structure element has no such entry.
     has $.Obj is entry(:required,:indirect); #| (Required; must be an indirect reference) The referenced object.
 
 }
