@@ -15,7 +15,7 @@ class PDF::OCMD
     use PDF::COS::Name;
     use PDF::COS::TextString;
 
-    has $.Type is entry(:required) where 'OCMD';
+    has PDF::COS::Name $.Type is entry(:required) where 'OCMD';
 
     has $.OCGs is entry where Array|Hash; #| (Optional) A dictionary or array of dictionaries specifying the optional content groups whose states shall determine the visibility of content controlled by this membership dictionary. Null values or references to deleted objects shall be ignored. If this entry is not present, is an empty array, or contains references only to null or deleted objects, the membership dictionary shall have no effect on the visibility of any content.
     has PDF::COS::Name $.P is entry where /^[All|Any][Off|On]$/; #| (Optional) A name specifying the visibility policy for content belonging to this membership dictionary. Valid values shall be:
